# resourceschedule_memmgr

./: CODEOWNERS  OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  bundle.json  memmgr.gni
common/include/: kernel_interface.h  memmgr_config_manager.h  memmgr_log.h  memmgr_ptr_util.h  single_instance.h  xml_helper.h
common/include/config/: avail_buffer_config.h  kill_config.h  nand_life_config.h  purgeablemem_config.h  reclaim_config.h  reclaim_priority_config.h  system_memory_level_config.h
common/src/: kernel_interface.cpp  memmgr_config_manager.cpp  xml_helper.cpp
common/src/config/: avail_buffer_config.cpp  kill_config.cpp  nand_life_config.cpp  purgeablemem_config.cpp  reclaim_config.cpp  reclaim_priority_config.cpp  system_memory_level_config.cpp
dmabufheap/: BUILD.gn  ohos.build
interface/innerkits/: BUILD.gn
interface/innerkits/include/: app_state_subscriber.h  bundle_priority_list.h  i_mem_mgr.h  mem_mgr_client.h  mem_mgr_constant.h  mem_mgr_process_state_info.h  mem_mgr_proxy.h  mem_mgr_window_info.h  memmgrservice_ipc_interface_code.h
interface/innerkits/src/: app_state_subscriber.cpp  bundle_priority_list.cpp  mem_mgr_client.cpp  mem_mgr_constant.cpp  mem_mgr_process_state_info.cpp  mem_mgr_proxy.cpp  mem_mgr_window_info.cpp
profile/: BUILD.gn  memmgr.para  memmgr.para.dac  memmgr_config.xml
purgeable_builder/: BUILD.gn
purgeable_builder/include/: purgeable_pixelmap_builder.h
purgeable_builder/src/: purgeable_pixelmap_builder.cpp
sa_profile/: 1909.json  1909.xml  BUILD.gn
services/memmgrservice/: BUILD.gn  memmgrservice.cfg  memmgrservice.rc
services/memmgrservice/include/: dump_command_dispatcher.h  mem_mgr_service.h  mem_mgr_stub.h
services/memmgrservice/include/event/: account_observer.h  account_subscriber.h  app_state_callback_mem_host.h  app_state_observer.h  bg_task_observer.h  kswapd_observer.h  mem_mgr_bg_task_subscriber.h  mem_mgr_event_center.h  mem_mgr_event_observer.h  mem_mgr_event_subscriber.h  memory_pressure_monitor.h  window_visibility_observer.h
services/memmgrservice/include/kill_strategy_manager/: low_memory_killer.h  multi_account_kill.h
services/memmgrservice/include/memory_level_manager/: memory_level_constants.h  memory_level_manager.h
services/memmgrservice/include/nandlife_controller/: nandlife_controller.h
services/memmgrservice/include/purgeable_mem_manager/: app_state_subscriber_proxy.h  app_state_subscriber_stub.h  iapp_state_subscriber.h  purgeable_mem_constants.h  purgeable_mem_manager.h  purgeable_mem_utils.h  remote_death_recipient.h
services/memmgrservice/include/reclaim_priority_manager/: account_bundle_info.h  account_priority_info.h  bundle_priority_info.h  default_multi_account_strategy.h  multi_account_manager.h  multi_account_strategy.h  os_account_priority_info.h  process_priority_info.h  reclaim_priority_constants.h  reclaim_priority_manager.h
services/memmgrservice/include/reclaim_strategy_manager/: avail_buffer_manager.h  memcg.h  memcg_mgr.h  reclaim_param.h  reclaim_strategy_constants.h  reclaim_strategy_manager.h
services/memmgrservice/src/: mem_mgr_service.cpp  mem_mgr_stub.cpp
services/memmgrservice/src/event/: account_observer.cpp  account_subscriber.cpp  app_state_callback_mem_host.cpp  app_state_observer.cpp  bg_task_observer.cpp  extension_connection_observer.cpp  kswapd_observer.cpp  mem_mgr_bg_task_subscriber.cpp  mem_mgr_event_center.cpp  mem_mgr_event_observer.cpp  mem_mgr_event_subscriber.cpp  memory_pressure_monitor.cpp  memory_pressure_observer.cpp  window_visibility_observer.cpp
services/memmgrservice/src/kill_strategy_manager/: low_memory_killer.cpp  multi_account_kill.cpp
services/memmgrservice/src/memory_level_manager/: memory_level_manager.cpp
services/memmgrservice/src/nandlife_controller/: nandlife_controller.cpp
services/memmgrservice/src/purgeable_mem_manager/: app_state_subscriber_proxy.cpp  app_state_subscriber_stub.cpp  purgeable_mem_manager.cpp  purgeable_mem_utils.cpp
services/memmgrservice/src/reclaim_priority_manager/: account_bundle_info.cpp  account_priority_info.cpp  bundle_priority_info.cpp  default_multi_account_priority.cpp  multi_account_manager.cpp  oom_score_adj_utils.cpp  os_account_priority_info.cpp  process_priority_info.cpp  reclaim_priority_manager.cpp
services/memmgrservice/src/reclaim_strategy_manager/: avail_buffer_manager.cpp  memcg.cpp  memcg_mgr.cpp  reclaim_strategy_manager.cpp
services/memmgrservice/test/: BUILD.gn
services/memmgrservice/test/unittest/: memmgr_test.cpp  utils.h
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/mem_fuzzer/: BUILD.gn  mem_fuzzer.cpp  mem_fuzzer.h
test/fuzztest/mem_fuzzer/corpus/: init
test/fuzztest/memmgrstub_fuzzer/: BUILD.gn  memmgrstub_fuzzer.cpp  memmgrstub_fuzzer.h
test/unittest/phone/: avail_buffer_manager_test.cpp  default_multi_account_strategy_test.cpp  innerkits_test.cpp  kernel_interface_test.cpp  low_memory_killer_test.cpp  memcg_mgr_test.cpp  memcg_test.cpp  memmgr_config_manager_test.cpp  memory_level_manager_test.cpp  multi_account_manager_test.cpp  oom_score_adj_utils_test.cpp  purgeable_memory_manager_test.cpp  reclaim_priority_manager_test.cpp  reclaim_strategy_manager_test.cpp  system_memory_level_config_test.cpp  user_memcg_test.cpp  utils.h  xml_helper_test.cpp
