# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.-

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")

module_output_path = "memmgrtest/"

memmgr_path = "//foundation/resourceschedule/memmgr"
memmgr_service = "${memmgr_path}/services/memmgrservice"
memmgr_service_configs = [ "${memmgr_service}:memory_memmgr_config" ]

memmgr_deps = [
  "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
  "//foundation/resourceschedule/memmgr/services/memmgrservice:memmgrservice",
  "//utils/native/base:utils",
]

memmgr_external_deps = [
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
]

memmgr_public_deps = [ "//third_party/googletest:gtest_main" ]

ohos_unittest("reclaim_priority_manager_test") {
  module_out_path = module_output_path
  configs = memmgr_service_configs

  sources = [ "unittest/phone/reclaim_priority_manager_test.cpp" ]

  deps = memmgr_deps
  if (is_standard_system) {
    external_deps = memmgr_external_deps
    public_deps = memmgr_public_deps
  }

  part_name = "memmgr"
  subsystem_name = "resourceschedule"
}

ohos_unittest("kernel_interface_test") {
  module_out_path = module_output_path
  configs = memmgr_service_configs

  sources = [ "unittest/phone/kernel_interface_test.cpp" ]

  deps = memmgr_deps
  if (is_standard_system) {
    external_deps = memmgr_external_deps
    public_deps = memmgr_public_deps
  }

  part_name = "memmgr"
  subsystem_name = "resourceschedule"
}

ohos_unittest("multi_account_manager_test") {
  module_out_path = module_output_path
  configs = memmgr_service_configs

  sources = [ "unittest/phone/multi_account_manager_test.cpp" ]

  deps = memmgr_deps
  if (is_standard_system) {
    external_deps = memmgr_external_deps
    public_deps = memmgr_public_deps
  }

  part_name = "memmgr"
  subsystem_name = "resourceschedule"
}

group("memmgr_unittest") {
  testonly = true
  deps = [
    ":kernel_interface_test",
    ":multi_account_manager_test",
    ":reclaim_priority_manager_test",
  ]
}
