# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("../../../memmgr.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("MemFuzzTest") {
  module_out_path = "memmgr/memmgr"
  fuzz_config_file = "${memmgr_root_path}/test/fuzztest/mem_fuzzer"

  include_dirs = [
    "${memmgr_service_path}/include",
    "${memgr_innerkits_path}/include",
    "${memmgr_common_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "mem_fuzzer.cpp" ]

  defines = []
  if (memmgr_purgeable_memory) {
    defines += [ "USE_PURGEABLE_MEMORY" ]
  }

  deps = [ "${memmgr_service_path}:memmgrservice" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":MemFuzzTest",
  ]
}
###############################################################################
