# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../memmgr.gni")

ohos_fuzztest("MemmgrstubFuzzTest") {
  module_out_path = "memmgrtest/"
  fuzz_config_file = "${memmgr_root_path}/test/fuzztest/memmgrstub_fuzzer"
  include_dirs = [ "${memmgr_service_path}/include" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./memmgrstub_fuzzer.cpp" ]
  defines = []
  deps = [ "${memmgr_service_path}:memmgrservice" ]
  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "memmgr:memmgrclient",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
